bug fix, fix memory leakages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(sqlite3trans)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(sqlite3trans main.cpp sqlite3.c ac_correction.cpp ac_correction.h DatabaseConnection.cpp DatabaseConnection.h Bean.h)
+add_executable(sqlite3trans main.cpp sqlite3.c DatabaseConnection.cpp DatabaseConnection.h Bean.h)
+target_link_libraries(sqlite3trans pthread dl)
